# bf

./: CMakeLists.txt  README.md  run.sh
examples/: nop.b
inc/: bf.hpp  defer.hpp  istream_iterator_impl.hpp  panic.hpp  streamable_array.hpp
src/: bf_compiler.cpp  bf_detail.cpp  bf_interpretor.cpp  bf_preproc.cpp  istream_iterator_impl.cpp  main.cpp
